--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,4 +11,4 @@ phases:
       # Package SAM template
       - sam package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file packaged.yaml
       # Deploy packaged SAM template
-      - sam deploy --template-file packaged.yaml --stack-name java-viz-hello-world-sam-application --capabilities CAPABILITY_IAM
+      - sam deploy --template-file packaged.yaml --stack-name java-viz-hello-world-sam-application --capabilities CAPABILITY_NAMED_IAM
