--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,5 +9,5 @@ phases:
       #Build spec reference
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
       # Package SAM template
-      - sam package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file packaged.yaml
+      - sam build && sam package --template-file template.yaml --output-template-file packaged.yaml --s3-bucket mysambucketforhelloworld
       
