--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,3 +11,10 @@ phases:
       # Package SAM template
       - aws cloudformation package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file packaged.yaml 
       
+      
+artifacts:
+  type: zip
+  files:
+    - template.yaml
+    - outputTemplate.yaml      
+      
