--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,7 +9,7 @@ phases:
       #Build spec reference
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
       # Package SAM template
-      - aws cloudformation package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file outputTemplate.yaml 
+      - aws cloudformation && aws cloudformation package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file outputTemplate.yaml 
       
       
 artifacts:
