--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,8 +10,7 @@ phases:
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
       # Package SAM template
       - sam build 
-      - cd /.aws-sam/build/
-      - sam package --template-file template.yaml --s3-bucket mysambucketforhelloworld --output-template-file outputTemplate.yaml 
+      - sam package --template .aws-sam/build/template.yaml --s3-bucket mysambucketforhelloworld --output-template-file outputTemplate.yaml 
       
 artifacts:
   files:
